--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+host: 0.0.0.0
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
