--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: census-docs
-email: census_docs@metroideas.org
+email: info@metroideas.org
 description: >- # this means to ignore newlines until "baseurl:"
   A website for documenting resources related to the US Census API.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -35,11 +35,14 @@ collections:
   wrappers:
     output: true
   mapping:
-    output: false
+    output: true
   reference:
-    output: false
+    output: true
   tutorials:
-    output: false
+    output: true
+
+sass:
+  sass_dir: _assets/_sass
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
