--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: census-docs
-email: info@metroideas.org
+email: sdesigns.contact@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A website for documenting resources related to the US Census API.
 baseurl: "" # the subpath of your site, e.g. /blog
