--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: censusdocs@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A website for documenting resources related to the US Census API.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://census-docs.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://census-docs.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CensusDocs
 github_username:  shepnathand
 
